--- a/css/style.scss
+++ b/css/style.scss
@@ -187,7 +187,7 @@ header {
     position: relative;
   }
 
-  .dropdownMenu {
+  .dropdown-menu {
     padding: 10px 0;
     position: absolute;
     background-color: white;
@@ -911,7 +911,7 @@ footer {
         color: $main;
       }
 
-      .dropdownMenu {
+      .dropdown-menu {
         position: static;
         padding: 10px 15px;
         text-align: center;
